@@ -110,7 +110,7 @@ public class SpellLevelTest extends AbstractCharacterTestCase
 		// Now for the tests
 		levels = listManagerFacet.getScopes2(aPC.getCharID(), pcc.get(ObjectKey.CLASS_SPELLLIST));
 		assertEquals("Incorrect number of spell levels returned", 1, levels.size());
-		assertEquals("Incorrect spell level returned", new Integer(3), levels.iterator().next());
+		assertEquals("Incorrect spell level returned", Integer.valueOf(3), levels.iterator().next());
 		Collection<Spell> result = listManagerFacet.getSet(aPC.getCharID(), pcc.get(ObjectKey.CLASS_SPELLLIST), 3);
 		assertEquals("Incorrect number of spells returned", 1, result.size());
 		assertEquals("Incorrect spell returned", spell, result.iterator().next());
